# Paperproject

./: requirements.txt
PaperReader/: .env.example  README.md  pyproject.toml  requirements.txt
PaperReader/src/paperreader/: __init__.py  cli.py  config.py
PaperReader/src/paperreader/cleaning/: llm_clean.py  strip_metadata.py
PaperReader/src/paperreader/ingestion/: elsevier_api.py  uniparser_adapter.py  uploader.py
PaperReader/src/paperreader/io/: doi_loader.py  json_store.py  xlsx_writer.py
PaperReader/src/paperreader/llm/: client.py  data_extract.py  info_extract.py  prompts.py  schemas.py
PaperReader/src/paperreader/pipeline/: run.py
PaperReader/src/paperreader/utils/: hashing.py  log.py
PaperReader/src/paperreader/web/: server.py
PaperReader/src/paperreader/web/static/: style.css
PaperReader/src/paperreader/web/templates/: index.html
PaperReader/tests/: test_strip_metadata.py
